--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">YuhanCommunity</string>
-    <string name="facebook_app_id">385883028702624</string>
-    <string name="fb_login_protocol_scheme">fb385883028702624</string>
 
     <!-- Sign In -->
     <string name="email">Email</string>
@@ -9,7 +7,6 @@
     <string name="signin_email">회원가입 및 이메일 로그인</string>
     <string name="signin_google">Google으로 로그인</string>
     <string name="signin_facebook">Facebook으로 로그인</string>
-    <string name="signin_twitter">Twitter으로 로그인</string>
     <string name="signup_complete">회원가입 성공</string>
     <string name="signin_complete">로그인 성공</string>
     <string name="signout">로그아웃</string>
@@ -38,6 +35,7 @@
     <string name="alarm_who">님이</string>
     <string name="alarm_comment">메세지를 남겼습니다.</string>
     <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>
+    <string name="fcm_message">알림 메세지 입니다.</string>
 
     <!-- Comment -->
     <string name="send">보내기</string>
@@ -54,4 +52,6 @@
     <!-- etc -->
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
+
+
 </resources>
